--- a/app-options-page/components/configuration/configurationView.html
+++ b/app-options-page/components/configuration/configurationView.html
@@ -65,7 +65,7 @@
                         </div>
                 </div>
                 <!-- <form id="imgur"> -->
-                                <input type="file" class="imgur" accept="image/*"/>
+                                <input type="text" id="testScan">
                               <!-- </form> -->
         </div>
 </div>
