--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -64,6 +64,7 @@
                 <h4 class="modal-title">{{BulkChangeStatus.length}} ĐƠN</h4>
             </div>
             <div class="modal-body">
+                <input placeholder="Nhập id để đổi trạng thái" type="text" id="testScan">
                 <div class="form-group-status" id="bulkStatus">
 
                     <input type="radio"  ng-model="BulkStatusRadio" style="margin: 4px 5px 22px 15px;" value="NEW">
