--- a/app-options-page/components/payment/paymentView.html
+++ b/app-options-page/components/payment/paymentView.html
@@ -36,6 +36,7 @@
         <select class="form-control" name="" id="selectStatus">
             <option></option>
             <option>VIB</option>
+            <option>TechComBank</option>
             <option>BIDV</option>
             <option>VietcomBank</option>
             <option>Tiền mặt</option>
