--- a/css/custom.css
+++ b/css/custom.css
@@ -360,6 +360,18 @@ table:hover {
 .popover{
   max-width: 400px;
 }
+input#testScan {
+  padding: 5px;
+  width: 100%;
+  border: #ddd solid 2px;
+  margin-bottom: 10px;
+  border-radius: 3px;
+}
+li.success-change.ng-scope {
+  margin-bottom: 10px;
+  padding: 6px 1px;
+  background: #ddd;
+}
 span.itemLinked{
   color: #fff;
   padding: 5px 10px;
