--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -6,7 +6,7 @@
             <span class="glyphicon glyphicon-print"></span>
         </button>
         <form id="imgur">
-            <div id="dropContainer" >
+            <div id="dropContainer">
                 <img src="../../../images/upload.png" id="upfile" style="    width: 35px;cursor:pointer" />
                 <input type="file" style="display:none" id="fileInput" class="imgur noprint" accept="image/*" />
             </div>
@@ -15,7 +15,7 @@
 </div>
 <img ng-show="loading" id="ordersLoading" src="../../../images/loader.gif" />
 
-<div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-cellnav ui-grid-pagination 
+<div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-exporter ui-grid-cellnav ui-grid-pagination
     class="grid noprint">
 </div>
 <div class="modal fade noprint" id="myModal" role="dialog">
@@ -49,7 +49,7 @@
                                 </div> -->
                 </div>
             </div>
-            <div class="modal-footer modal-single" >
+            <div class="modal-footer modal-single">
                 <!-- <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button> -->
             </div>
         </div>
@@ -66,8 +66,10 @@
                 <input placeholder="Nhập id để đổi trạng thái" type="text" id="testScan" autofocus>
                 <div id="listChangeSuccess">
                     <span ng-show="BulkChangeStatus.length > 0">
-                        <input type="checkbox" ng-click="toggle($event)" id="checkall"/><span> Chọn hết</span> <br/>
-                    </span> 
+                        <input type="checkbox" ng-click="toggle($event)" id="checkall" />
+                        <span> Chọn hết</span>
+                        <br/>
+                    </span>
                     <li ng-repeat="i in BulkChangeStatus" id="{{i.id}}" class="success-change">
                         <input type="checkbox" name="scanId" value="{{i.id}}">
                         <span class="idSuccess">{{i.id}}</span>
@@ -82,19 +84,19 @@
                 </div>
                 <div class="form-group-status" id="bulkStatus">
                     <div class="changeStatus">
-                        <input type="radio"  ng-model="BulkStatusRadio" style="margin: 4px 5px 22px 15px;" value="NEW">
+                        <input type="radio" ng-model="BulkStatusRadio" style="margin: 4px 5px 22px 15px;" value="NEW">
                         <b>ĐƠN MỚI</b>
-    
-    
-                        <input type="radio"  ng-model="BulkStatusRadio" style="margin: 4px 5px 22px 15px;" value="PACKED">
+
+
+                        <input type="radio" ng-model="BulkStatusRadio" style="margin: 4px 5px 22px 15px;" value="PACKED">
                         <b>ĐÃ ĐÓNG GÓI</b>
                         <button ng-click="createExport()" style="margin-left: 26px;margin-bottom: 15px;border: none;padding: 6px;background: #da3725;color: #fff;border-radius: 3px;">TẠO PHIẾU XUẤT</button>
                     </div>
                 </div>
-                
+
             </div>
             <div class="modal-footer">
-                
+
             </div>
         </div>
     </div>
@@ -140,7 +142,15 @@
         <tr ng-repeat="item in products">
             <td style="background: #fff;">
                 <img class="imgPro" src="{{item.imageUrl}}" width="80px" height="80px" alt=""> </td>
-            <td>{{ item.name }} <br><b  ng-show="item.orders.length > 0">[ <span style="color:rgb(255, 87, 34)" ng-repeat="order in item.orders">{{order}}<span ng-show="item.orders.length >1 " style="color:#000">, </span></span> ]</b> </td>
+            <td>{{ item.name }}
+                <br>
+                <b ng-show="item.orders.length > 0">[
+                    <span  ng-repeat="order in item.orders" class="{{order.one}}">
+                        {{order.order}}
+                        <span ng-show="item.orders.length >1 " style="color:#000">, </span>
+                    </span> 
+                ]</b>
+            </td>
             <td>{{ item.model }}</td>
             <td>{{ item.amount }}</td>
         </tr>
