--- a/css/custom.css
+++ b/css/custom.css
@@ -236,11 +236,29 @@ input:checked+.slider:before {
   box-shadow: 2px 8px 17px -4px rgba(0, 0, 0, 0.34);
   transition: all 0.3s ease;
 }
-
+td.s1 {
+  width: 94px;
+}
+td.s2 {
+  width: 100%;
+}
+div.c{
+  margin-top: 8px
+}
+.general div{
+  margin-bottom: 10px
+}
 table {
   background-color: #f7f7f7;
   transition: all 0.3s ease;
-  box-shadow: 2px 8px 17px -4px rgba(0, 0, 0, 0.34);
+  /* box-shadow: 2px 8px 17px -4px rgba(0, 0, 0, 0.34); */
+}
+input#target {
+  width: 100%;
+  margin: 10px 0;
+  padding: 5px;
+  border-radius: 3px;
+  border: #2644cc3d solid 1px;
 }
 
 .form-group-status.noprint:hover,
@@ -326,6 +344,14 @@ table:hover {
   transform: rotate(45deg);
 }
 
+table.has-multi-entry-order tr{
+  background: #ea16161a
+}
+
+table.has-multi-entry-order>tbody>tr>td{
+  border: 2px solid #ffffff;
+}
+
 .navbar {
   border: none
 }
@@ -339,10 +365,100 @@ table:hover {
   float: left;
   margin: 5px 5px 5px 30px;
 }
-
+#addInvoice .col-md-6 {
+  padding: 15px;
+  border-left: #e5e5e5 solid 1px;
+  border-right: #e5e5e5 solid 1px;
+  border-bottom: none;
+}
+.priceClassify {
+  margin-bottom: 10px;
+}
+span.previewInvoice {
+  height: 100%;
+  background: #33333324;
+  padding: 6px 50px;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
+}
+li.classifyInvoice input[type="number"] {
+  float: right;
+  width: 20%;
+  padding-left: 4px;
+  height: 30px;
+  border: #f7f7f7 solid 2px;
+}
+.priceClassify select{
+  width: 38%;
+  display: inline-block;
+  padding: 0 10px;
+  height: 27px;
+}
+.priceClassify input{
+  width: 60%;
+  /* display: inline-block; */
+  padding: 3px 8px;
+  border: rgba(0, 2, 0, 0.28) solid 1px;
+  border-radius: 3px;
+  height: 27px;
+}
+#selectCurrence{
+    width: 20%;
+    display: inline-block;
+    height: 30px;
+    padding: 0 25px;
+    border: #085a9e4f solid 1px;
+}
+li.clicked {
+  background: #1c6ae2cc !important;
+  color: #fff !important;
+  
+}
+li.classifyInvoice {
+  list-style-type: none;
+  margin: 7px 0;
+  background: rgba(0, 0, 0, 0.03);
+  border: #eee solid 1px;
+  border-radius: 4px;
+}
+li.productInvoice {
+  list-style-type: none;
+  background: #f3f3f3;
+  /* color: #fff; */
+  padding: 7px;
+  margin-bottom: 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+button.saveClassify{
+  float: right;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 27px;
+  background: #ff5c0c;
+  font-weight: bold;
+}
+li.productInvoice p.name, li.classifyInvoice p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 30ch;
+    margin: 0 0 -3px;;
+    display: inline-block;
+}
+input#invoiceTraceno {
+  width: 50%;
+  padding: 4px;
+  border: #5cb85c5c solid 1px;
+  border-radius: 3px;
+}
 .imgageLeft, .imgageRight {
   width: 45px;
   border: solid 1px #ccc;
+}
+span.ui-grid-header-cell-label {
+  text-transform: uppercase;
 }
 .popover.awesome-popover-class{
   max-width: 200px;
@@ -359,6 +475,12 @@ table:hover {
 }
 .popover{
   max-width: 400px;
+}
+span.only{
+  color: blue !important
+}
+table.products span{
+  color:rgb(255, 87, 34)
 }
 input#testScan {
   padding: 5px;
@@ -440,7 +562,11 @@ li.classifyItem {
   list-style-type: none;
   margin: 13px 0;
 }
-li.classifyItem input[type="text"] {
+li.classifyItem input[type="number"] {
+  width: 15%;
+  font-size: 15px;
+}
+li.classifyItem input[type="text"],li.classifyItem input[type="number"] {
   padding: 13px 0 15px 18px;
     border: #4cae4c5e solid 1px;
     background: #f5f5f58f;
