--- a/lib/custom/content/css/custom.css
+++ b/lib/custom/content/css/custom.css
@@ -6,5 +6,32 @@
     position:fixed;
     bottom:0;
     left:0;
-    z-index:999;
+    z-index:99999999;
+}
+input#newName {
+    width: 100%;
+    padding: 5px;
+    border: #22222278 solid 1px;
+    border-radius: 2px;
+}
+.addDIS {
+    margin-bottom: 19px;
+}
+.classifyList li {
+    margin: 10px 0;
+    background: #efefef;
+    list-style-type: none;
+}
+.classifyList li input[type="text"] {
+    margin-top: 8px;
+    border: #ddd solid 1px;
+    border-radius: 2px;
+    height: 25px;
+    padding: 5px;
+}
+span.removeClassifyView {
+    margin: 7px;
+    float: right;
+    font-weight: bold;
+    color: #ca1717;
 }
