--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -1,4 +1,4 @@
-<div style="display: inline;position: fixed;bottom: 0px;left: 0px;z-index: 999;">
+<div style="display: inline;position: fixed;bottom: 0px;right: 0px;z-index: 999;">
     <div class="panel-body">
         <!-- <div>
             <span class="noprint">
@@ -15,18 +15,18 @@
                 border-radius: 25px" class="btn btn-primary noprint" id="print">
                 <span class="glyphicon glyphicon-print"></span>
             </button>
-            <label class="checkboxcontainer"> IN SẢN PHẨM
+            <!-- <label class="checkboxcontainer"> IN SẢN PHẨM
                 <input type="checkbox" ng-model="printProducts">
                 <span class="checkmark"></span>
-            </label>
+            </label> -->
         </span>
     </div>
 </div>
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6" style="padding-right: 67px;">
+<!-- <div class="container"> -->
+    <div class="row" style="    margin-right: 25px;">
+        <div class="col-md-6" style="padding-right: 35px;">
             <table id="left" class="table table-bordered">
                 <tbody>
                     <tr>
@@ -143,4 +143,4 @@
             </div>
         </div>
     </div>
-</div>
+<!-- </div> -->
