--- a/app-options-page/components/import-detail/importView.html
+++ b/app-options-page/components/import-detail/importView.html
@@ -2,14 +2,14 @@
 <div class="noprint">
     <div class="col-md-10">
         <div>
-            <div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-cellnav ui-grid-pagination ui-grid-edit
+            <div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-exporter ui-grid-selection ui-grid-cellnav ui-grid-pagination ui-grid-edit
                 class="grid"></div>
         </div>
     </div>
     <div class="col-md-2">
         <ul class="list-group" style="font-size: 20px;">
-            <li class="list-group-item">Ngày nhận tiền: {{date}}</li>
-            <li class="list-group-item">Ngân hàng: {{bank}} </li>            
+            <li class="list-group-item">{{date}}</li>
+            <li class="list-group-item">{{bank}} </li>            
         </ul>        
     </div>
 </div>
