--- a/lib/custom/content/css/custom.css
+++ b/lib/custom/content/css/custom.css
@@ -1,5 +1,5 @@
 .popover{
-    max-width: 100%; /* Max Width of the popover (depending on the container!) */
+    max-width: 100%; 
 }
 .panel-1688-shopee{
     display:inline;
