--- a/app-options-page/components/export-detail/export.html
+++ b/app-options-page/components/export-detail/export.html
@@ -13,7 +13,9 @@
         <tr ng-repeat="item in products">
             <td style="background: #fff;">
                 <img class="imgPro" src="{{item.imageUrl}}" width="80px" height="80px" alt=""> </td>
-            <td>{{ item.name }} <br><b  ng-show="item.orders.length > 0">[ <span style="color:rgb(255, 87, 34)" ng-repeat="order in item.orders">{{order}}<span ng-show="item.orders.length >1 " style="color:#000">, </span></span> ]</b> </td>
+            <td>{{ item.name }} <br><b ng-show="item.orders.length > 0">[ <span style="color:rgb(255, 87, 34)"
+                        ng-repeat="order in item.orders">{{order}}<span ng-show="item.orders.length >1 " style="color:#000">,
+                        </span></span> ]</b> </td>
             <td>{{ item.model }}</td>
             <td>{{ item.amount }}</td>
         </tr>
@@ -22,8 +24,8 @@
 <div class="noprint">
     <div class="col-md-9">
         <div>
-            <div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-cellnav ui-grid-pagination ui-grid-edit
-                class="grid"></div>
+            <div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-cellnav
+                ui-grid-pagination ui-grid-edit class="grid"></div>
         </div>
     </div>
     <div class="col-md-3">
@@ -31,8 +33,10 @@
             <li class="list-group-item">
                 <span id="size">Id: {{id}}</span>
             </li>
-            <li class="list-group-item">Đơn đã gửi:
-               <span id="shipped">{{arrShipped.length}}/<span id="size">{{size}}</span></span> </li>
+            <li ng-show="arrDone.length !== size" class="list-group-item">Đơn đã gửi:
+                <span id="shipped">{{arrShipped.length}}/<span id="size">{{size}}</span></span> </li>
+            <li ng-show="arrDone.length == size" class="list-group-item">Hoàn thành:
+                <span id="shipped">{{arrDone.length}}/<span id="size">{{size}}</span></span> </li>
             <li class="list-group-item">
                 {{carrier}}
             </li>
@@ -46,11 +50,17 @@
         <span ng-show="!cancel">{{status}}</span>
         <div ng-show="cancel">
 
-            <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="MỚI"> MỚI
+            <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="NEW"> MỚI
+            <br>
 
-
-            <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="ĐÃ GIAO"> ĐÃ GIAO
-
+            <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="SHIPPED"> ĐÃ GIAO
+            <br>
+            <span ng-show="arrDone.length == size">
+                <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status"
+                    value="DONE"> HOÀN THÀNH
+                    
+            <br>
+            </span>
 
             <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="CANCEL"> HỦY
 
@@ -65,7 +75,7 @@
                 <td>{{carrier}}</td>
                 <td>{{date}}</td>
             </tr>
-            <tr id="haveQR">                
+            <tr id="haveQR">
                 <td>Người giao:</td>
                 <td>
                     SỐ LƯỢNG ĐƠN:
@@ -77,7 +87,7 @@
     </table>
     <p>
         <span style="line-height: 40px;font-size: 12px;margin-right: 12px;" ng-repeat="x in arrTraceno | orderBy">
-            {{x}}, 
+            {{x}},
         </span>
     </p>
 </div>
